<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


            <ImageView
                android:id="@+id/productImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:background="@color/black"
                app:layout_constraintDimensionRatio="1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/red_pav"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/robert_van"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />


            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/_361"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorName" />

            <TextView
                android:id="@+id/priceWithoutSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/_656"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#518F9193"
                app:layout_constraintStart_toEndOf="@+id/productPrice"
                app:layout_constraintTop_toBottomOf="@+id/authorName" />

            <TextView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/line"
                android:textColor="@color/red_500"
                app:layout_constraintBottom_toBottomOf="@id/priceWithoutSale"
                app:layout_constraintEnd_toEndOf="@id/priceWithoutSale"
                app:layout_constraintStart_toStartOf="@id/priceWithoutSale"
                app:layout_constraintTop_toTopOf="@+id/priceWithoutSale" />

            <TextView
                android:id="@+id/readPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pdf_0_4"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceWithoutSale" />

            <TextView
                android:id="@+id/sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/sales"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/readPdf" />

            <ImageView
                android:id="@+id/saleBackground"
                android:layout_width="284dp"
                android:layout_height="99dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sales" />

            <ImageView
                android:id="@+id/blackCircle"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_blackcircle"
                app:layout_constraintStart_toStartOf="@+id/saleBackground"
                app:layout_constraintTop_toTopOf="@+id/saleBackground" />

            <TextView
                android:id="@+id/saleSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/_45"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/blackCircle"
                app:layout_constraintEnd_toEndOf="@id/blackCircle"
                app:layout_constraintStart_toStartOf="@+id/blackCircle"
                app:layout_constraintTop_toTopOf="@+id/blackCircle" />

            <TextView
                android:id="@+id/saleText"
                android:layout_width="212dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:text="@string/sale45"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/saleBackground"
                app:layout_constraintStart_toEndOf="@+id/blackCircle"
                app:layout_constraintTop_toTopOf="@+id/saleBackground" />

            <TextView
                android:id="@+id/saleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_3_6"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="@+id/saleBackground"
                app:layout_constraintTop_toBottomOf="@+id/saleText" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saleBackground" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="387dp"
                android:layout_height="122dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/descriptionText"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_menu_more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/showMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/showMore"
                android:textColor="@color/blue"
                app:layout_constraintStart_toEndOf="@+id/more"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>